; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_pktcdvd.c_pkt_rbtree_erase.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_pktcdvd.c_pkt_rbtree_erase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pktcdvd_device = type { i64, i32, i32 }
%struct.pkt_rb_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pktcdvd_device*, %struct.pkt_rb_node*)* @pkt_rbtree_erase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pkt_rbtree_erase(%struct.pktcdvd_device* %0, %struct.pkt_rb_node* %1) #0 {
  %3 = alloca %struct.pktcdvd_device*, align 8
  %4 = alloca %struct.pkt_rb_node*, align 8
  store %struct.pktcdvd_device* %0, %struct.pktcdvd_device** %3, align 8
  store %struct.pkt_rb_node* %1, %struct.pkt_rb_node** %4, align 8
  %5 = load %struct.pkt_rb_node*, %struct.pkt_rb_node** %4, align 8
  %6 = getelementptr inbounds %struct.pkt_rb_node, %struct.pkt_rb_node* %5, i32 0, i32 0
  %7 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %3, align 8
  %8 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %7, i32 0, i32 2
  %9 = call i32 @rb_erase(i32* %6, i32* %8)
  %10 = load %struct.pkt_rb_node*, %struct.pkt_rb_node** %4, align 8
  %11 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %3, align 8
  %12 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @mempool_free(%struct.pkt_rb_node* %10, i32 %13)
  %15 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %3, align 8
  %16 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %17, -1
  store i64 %18, i64* %16, align 8
  %19 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %3, align 8
  %20 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp slt i64 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @BUG_ON(i32 %23)
  ret void
}

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @mempool_free(%struct.pkt_rb_node*, i32) #1

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
